Update build file module dependencies